--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
         <ul>
             <li>
-                <a href="https://acesse.one/rLgBM" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-da-silva-2422a9236?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " target="_blank">LinkedIn</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/jotape_sil?igsh=NWU0NjJsaW0zNjJy" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/jotape_sil?utm_source=qr&igsh=NWU0NjJsaW0zNjJy" target="_blank">Instagram</a>
             </li>
             <li>
                 <a href="https://github.com/JotapeSil" target="_blank">Portifolio</a>
@@ -38,10 +38,10 @@
             </li>
         </ul>
         <div id="social-link">
-            <a href="https://acesse.one/rLgBM" target="_blank">
+            <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-da-silva-2422a9236?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
-            <a href="https://www.instagram.com/jotape_sil?igsh=NWU0NjJsaW0zNjJy" target="_blank">
+            <a href="https://www.instagram.com/jotape_sil?utm_source=qr&igsh=NWU0NjJsaW0zNjJy" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
             <a href="https://github.com/JotapeSil" target="_blank"> 
